--- a/docs/money/tracker/component/ItemEditor.html
+++ b/docs/money/tracker/component/ItemEditor.html
@@ -142,7 +142,7 @@ implements com.vaadin.flow.component.KeyNotifier</span></div>
 <div class="table-header col-first">Modifier and Type</div>
 <div class="table-header col-second">Field</div>
 <div class="table-header col-last">Description</div>
-<div class="col-first even-row-color"><code>private final com.vaadin.flow.data.binder.Binder&lt;<a href="../domain/Item.html" title="class in money.tracker.domain">Item</a>&gt;</code></div>
+<div class="col-first even-row-color"><code>private final com.vaadin.flow.data.binder.Binder&lt;<a href="../domain/Item.html" title="class in money.tracker.entity">Item</a>&gt;</code></div>
 <div class="col-second even-row-color"><code><a href="#binder" class="member-name-link">binder</a></code></div>
 <div class="col-last even-row-color">&nbsp;</div>
 <div class="col-first odd-row-color"><code>private final com.vaadin.flow.component.orderedlayout.HorizontalLayout</code></div>
@@ -160,7 +160,7 @@ implements com.vaadin.flow.component.KeyNotifier</span></div>
 <div class="col-first odd-row-color"><code>private final com.vaadin.flow.component.textfield.TextField</code></div>
 <div class="col-second odd-row-color"><code><a href="#dest" class="member-name-link">dest</a></code></div>
 <div class="col-last odd-row-color">&nbsp;</div>
-<div class="col-first even-row-color"><code>private <a href="../domain/Item.html" title="class in money.tracker.domain">Item</a></code></div>
+<div class="col-first even-row-color"><code>private <a href="../domain/Item.html" title="class in money.tracker.entity">Item</a></code></div>
 <div class="col-second even-row-color"><code><a href="#item" class="member-name-link">item</a></code></div>
 <div class="col-last even-row-color">&nbsp;</div>
 <div class="col-first odd-row-color"><code>private final <a href="../repo/ItemRepo.html" title="interface in money.tracker.repo">ItemRepo</a></code></div>
@@ -208,7 +208,7 @@ implements com.vaadin.flow.component.KeyNotifier</span></div>
 <div class="block">Функционал удаления</div>
 </div>
 <div class="col-first odd-row-color method-summary-table method-summary-table-tab2 method-summary-table-tab4"><code>void</code></div>
-<div class="col-second odd-row-color method-summary-table method-summary-table-tab2 method-summary-table-tab4"><code><a href="#edit(money.tracker.domain.Item)" class="member-name-link">edit</a><wbr>(<a href="../domain/Item.html" title="class in money.tracker.domain">Item</a>&nbsp;it)</code></div>
+<div class="col-second odd-row-color method-summary-table method-summary-table-tab2 method-summary-table-tab4"><code><a href="#edit(money.tracker.domain.Item)" class="member-name-link">edit</a><wbr>(<a href="../domain/Item.html" title="class in money.tracker.entity">Item</a>&nbsp;it)</code></div>
 <div class="col-last odd-row-color method-summary-table method-summary-table-tab2 method-summary-table-tab4">
 <div class="block">Функционал изменения
  обработка данных из таблицы или создание новой записи</div>
@@ -293,7 +293,7 @@ implements com.vaadin.flow.component.KeyNotifier</span></div>
 <li>
 <section class="detail" id="item">
 <h3>item</h3>
-<div class="member-signature"><span class="modifiers">private</span>&nbsp;<span class="return-type"><a href="../domain/Item.html" title="class in money.tracker.domain">Item</a></span>&nbsp;<span class="element-name">item</span></div>
+<div class="member-signature"><span class="modifiers">private</span>&nbsp;<span class="return-type"><a href="../domain/Item.html" title="class in money.tracker.entity">Item</a></span>&nbsp;<span class="element-name">item</span></div>
 </section>
 </li>
 <li>
@@ -341,7 +341,7 @@ implements com.vaadin.flow.component.KeyNotifier</span></div>
 <li>
 <section class="detail" id="binder">
 <h3>binder</h3>
-<div class="member-signature"><span class="modifiers">private final</span>&nbsp;<span class="return-type">com.vaadin.flow.data.binder.Binder&lt;<a href="../domain/Item.html" title="class in money.tracker.domain">Item</a>&gt;</span>&nbsp;<span class="element-name">binder</span></div>
+<div class="member-signature"><span class="modifiers">private final</span>&nbsp;<span class="return-type">com.vaadin.flow.data.binder.Binder&lt;<a href="../domain/Item.html" title="class in money.tracker.entity">Item</a>&gt;</span>&nbsp;<span class="element-name">binder</span></div>
 </section>
 </li>
 <li>
@@ -408,7 +408,7 @@ implements com.vaadin.flow.component.KeyNotifier</span></div>
 <li>
 <section class="detail" id="edit(money.tracker.domain.Item)">
 <h3>edit</h3>
-<div class="member-signature"><span class="modifiers">public</span>&nbsp;<span class="return-type">void</span>&nbsp;<span class="element-name">edit</span><wbr><span class="parameters">(<a href="../domain/Item.html" title="class in money.tracker.domain">Item</a>&nbsp;it)</span></div>
+<div class="member-signature"><span class="modifiers">public</span>&nbsp;<span class="return-type">void</span>&nbsp;<span class="element-name">edit</span><wbr><span class="parameters">(<a href="../domain/Item.html" title="class in money.tracker.entity">Item</a>&nbsp;it)</span></div>
 <div class="block">Функционал изменения
  обработка данных из таблицы или создание новой записи</div>
 <dl class="notes">
