--- a/docs/money/tracker/view/MainView.html
+++ b/docs/money/tracker/view/MainView.html
@@ -140,7 +140,7 @@ loadScripts(document, 'script');</script>
 <div class="col-first even-row-color"><code>private final com.vaadin.flow.component.textfield.TextField</code></div>
 <div class="col-second even-row-color"><code><a href="#filter" class="member-name-link">filter</a></code></div>
 <div class="col-last even-row-color">&nbsp;</div>
-<div class="col-first odd-row-color"><code>private final com.vaadin.flow.component.grid.Grid&lt;<a href="../domain/Item.html" title="class in money.tracker.domain">Item</a>&gt;</code></div>
+<div class="col-first odd-row-color"><code>private final com.vaadin.flow.component.grid.Grid&lt;<a href="../domain/Item.html" title="class in money.tracker.entity">Item</a>&gt;</code></div>
 <div class="col-second odd-row-color"><code><a href="#grid" class="member-name-link">grid</a></code></div>
 <div class="col-last odd-row-color">&nbsp;</div>
 <div class="col-first even-row-color"><code>private final <a href="../repo/ItemRepo.html" title="interface in money.tracker.repo">ItemRepo</a></code></div>
@@ -181,7 +181,7 @@ loadScripts(document, 'script');</script>
 <div class="table-header col-second">Method</div>
 <div class="table-header col-last">Description</div>
 <div class="col-first even-row-color method-summary-table method-summary-table-tab2 method-summary-table-tab4"><code>double</code></div>
-<div class="col-second even-row-color method-summary-table method-summary-table-tab2 method-summary-table-tab4"><code><a href="#countSum(java.util.List)" class="member-name-link">countSum</a><wbr>(<a href="https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/util/List.html" title="class or interface in java.util" class="external-link">List</a>&lt;<a href="../domain/Item.html" title="class in money.tracker.domain">Item</a>&gt;&nbsp;items)</code></div>
+<div class="col-second even-row-color method-summary-table method-summary-table-tab2 method-summary-table-tab4"><code><a href="#countSum(java.util.List)" class="member-name-link">countSum</a><wbr>(<a href="https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/util/List.html" title="class or interface in java.util" class="external-link">List</a>&lt;<a href="../domain/Item.html" title="class in money.tracker.entity">Item</a>&gt;&nbsp;items)</code></div>
 <div class="col-last even-row-color method-summary-table method-summary-table-tab2 method-summary-table-tab4">
 <div class="block">Подсчёт суммарных цен в записях</div>
 </div>
@@ -276,7 +276,7 @@ loadScripts(document, 'script');</script>
 <li>
 <section class="detail" id="grid">
 <h3>grid</h3>
-<div class="member-signature"><span class="modifiers">private final</span>&nbsp;<span class="return-type">com.vaadin.flow.component.grid.Grid&lt;<a href="../domain/Item.html" title="class in money.tracker.domain">Item</a>&gt;</span>&nbsp;<span class="element-name">grid</span></div>
+<div class="member-signature"><span class="modifiers">private final</span>&nbsp;<span class="return-type">com.vaadin.flow.component.grid.Grid&lt;<a href="../domain/Item.html" title="class in money.tracker.entity">Item</a>&gt;</span>&nbsp;<span class="element-name">grid</span></div>
 </section>
 </li>
 <li>
@@ -312,7 +312,7 @@ loadScripts(document, 'script');</script>
 <li>
 <section class="detail" id="countSum(java.util.List)">
 <h3>countSum</h3>
-<div class="member-signature"><span class="modifiers">public</span>&nbsp;<span class="return-type">double</span>&nbsp;<span class="element-name">countSum</span><wbr><span class="parameters">(<a href="https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/util/List.html" title="class or interface in java.util" class="external-link">List</a>&lt;<a href="../domain/Item.html" title="class in money.tracker.domain">Item</a>&gt;&nbsp;items)</span></div>
+<div class="member-signature"><span class="modifiers">public</span>&nbsp;<span class="return-type">double</span>&nbsp;<span class="element-name">countSum</span><wbr><span class="parameters">(<a href="https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/util/List.html" title="class or interface in java.util" class="external-link">List</a>&lt;<a href="../domain/Item.html" title="class in money.tracker.entity">Item</a>&gt;&nbsp;items)</span></div>
 <div class="block">Подсчёт суммарных цен в записях</div>
 <dl class="notes">
 <dt>Returns:</dt>
