--- a/docs/money/tracker/view/package-summary.html
+++ b/docs/money/tracker/view/package-summary.html
@@ -81,7 +81,7 @@ loadScripts(document, 'script');</script>
 <div class="col-last even-row-color">&nbsp;</div>
 <div class="col-first odd-row-color"><a href="../component/package-summary.html">money.tracker.component</a></div>
 <div class="col-last odd-row-color">&nbsp;</div>
-<div class="col-first even-row-color"><a href="../domain/package-summary.html">money.tracker.domain</a></div>
+<div class="col-first even-row-color"><a href="../domain/package-summary.html">money.tracker.entity</a></div>
 <div class="col-last even-row-color">&nbsp;</div>
 <div class="col-first odd-row-color"><a href="../repo/package-summary.html">money.tracker.repo</a></div>
 <div class="col-last odd-row-color">&nbsp;</div>
