--- a/docs/money/tracker/component/package-summary.html
+++ b/docs/money/tracker/component/package-summary.html
@@ -79,7 +79,7 @@ loadScripts(document, 'script');</script>
 <div class="table-header col-last">Description</div>
 <div class="col-first even-row-color"><a href="../package-summary.html">money.tracker</a></div>
 <div class="col-last even-row-color">&nbsp;</div>
-<div class="col-first odd-row-color"><a href="../domain/package-summary.html">money.tracker.domain</a></div>
+<div class="col-first odd-row-color"><a href="../domain/package-summary.html">money.tracker.entity</a></div>
 <div class="col-last odd-row-color">&nbsp;</div>
 <div class="col-first even-row-color"><a href="../repo/package-summary.html">money.tracker.repo</a></div>
 <div class="col-last even-row-color">&nbsp;</div>
